tests/rspack-test/normalCases/errors/case-sensitive/rspack.config.js
const { CaseSensitivePlugin } = require("@rspack/core");

module.exports = {
  plugins: [new CaseSensitivePlugin()],
};